# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: audit-on-push.yml  general.yml
ci/: general.yml  scheduled-audit.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
